--- a/index.html
+++ b/index.html
@@ -4,12 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- link font esterni -->
     <link href="http://fonts.cdnfonts.com/css/whitney-2" rel="stylesheet">
     <link href="http://fonts.cdnfonts.com/css/neue-helvetica" rel="stylesheet">
+    <!-- link icone esterne -->
+    <link rel=“stylesheet” href=“https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css”>
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Discord</title>
 </head>
 <body>
+
+    <!-- Header della pagina -->
+    <header>
+        <div class="container">
+            <div class="menu">
+            </div>
+            <div class="jumbotron"></div>
+        </div>
+    </header>
+    <!-- /Header della pagina -->
+
+    <!-- Main della pagina -->
+    <main>
+    </main>
+    <!-- /Main della pagina -->
+
+    <!-- Footer della pagina -->
+    <footer>
+    </footer>
+    <!-- /Footer della pagina -->
     
 </body>
 </html>
