--- a/index.html
+++ b/index.html
@@ -26,11 +26,54 @@
 
     <!-- Main della pagina -->
     <main>
+        <!-- Prima sezione -->
+        <section class="divisione">
+            <div class="container">
+                <div class="sinistra-uguale"></div>
+                <div class="destra-uguale"></div>
+            </div>
+        </section>
+        <!-- /Prima sezione -->
+
+        <!-- Seconda sezione -->
+        <section class="divisione gray">
+            <div class="container">
+                <div id="sinistra"></div>
+                <div id="destra"></div>
+            </div>
+        </section>
+        <!-- /Seconda sezione -->
+
+
+        <!-- Terza sezione -->
+        <section class="divisione">
+            <div class="container">
+                <div class="sinistra-uguale"></div>
+                <div class="destra-uguale"></div>
+            </div>
+        </section>
+        <!-- /Terza sezione -->
+
+
+        <!-- Quarta sezione -->
+        <section class="divisione_finale gray">
+            <div class="container">
+                <div id="partesopra"></div>
+                <div id="partesotto"></div>
+                <div id="partebottom"></div>
+            </div>
+        </section>
+        <!-- /Quarta sezione -->
+
     </main>
     <!-- /Main della pagina -->
 
     <!-- Footer della pagina -->
     <footer>
+        <div class="container">
+            <div class="sopra"></div>
+            <div class="sotto"></div>
+        </div>
     </footer>
     <!-- /Footer della pagina -->
     
