--- a/index.html
+++ b/index.html
@@ -17,7 +17,21 @@
     <!-- Header della pagina -->
     <header>
         <div class="container">
-            <div class="menu">
+            <div class="menu clearflix">
+                    <!-- Logo della pagina -->
+                    <a href="#">
+                        <img id="logo" src="img/logo.svg" alt="Logo">
+                    </a>
+
+                <!-- Menu -->
+                <ul>
+                    <li><a href="#">Scarica</a></li>
+                    <li><a href="#">Perch&eacute; Discord</a></li>
+                    <li><a href="#">Nitro</a></li>
+                    <li><a href="#">Sicurezza</a></li>
+                    <li><a href="#">Assistenza</a></li>
+                </ul>
+
             </div>
             <div class="jumbotron"></div>
         </div>
