--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
     <!-- Header della pagina -->
     <header>
         <div class="container">
-            <div class="menu clearflix">
-                    <!-- Logo della pagina -->
-                    <a href="#">
-                        <img id="logo" src="img/logo.svg" alt="Logo">
-                    </a>
-
+            <nav>            
                 <!-- Menu -->
                 <ul>
+                    <li> 
+                        <a href="#">
+                            <img src="img/logo.svg" alt="Logo">
+                        </a>
+                    </li>
                     <li><a href="#">Scarica</a></li>
                     <li><a href="#">Perch&eacute; Discord</a></li>
                     <li><a href="#">Nitro</a></li>
                     <li><a href="#">Sicurezza</a></li>
                     <li><a href="#">Assistenza</a></li>
+                    <li><a href="#" id="accedi"> Accedi </a></li>
                 </ul>
-
-            </div>
+            </nav>
             <div class="jumbotron"></div>
         </div>
     </header>
