--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
                     <li><a href="#" id="accedi"> Accedi </a></li>
                 </ul>
             </nav>
-            <div class="jumbotron"></div>
+            <div class="jumbotron">
+                <h1>Il tuo posto per parlare</h1>
+                <p>Che tu faccia parte di club scolastico, gruppo di gamer, comunit&agrave; artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende pi&ugrave; facile chiacchierare ogni giorno e ritrovarsi pi&ugrave; spesso.</p>
+            </div>
         </div>
     </header>
     <!-- /Header della pagina -->
