--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@
             <div class="jumbotron">
                 <h1>Il tuo posto per parlare</h1>
                 <p>Che tu faccia parte di club scolastico, gruppo di gamer, comunit&agrave; artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende pi&ugrave; facile chiacchierare ogni giorno e ritrovarsi pi&ugrave; spesso.</p>
+                <div class="under">
+                    <span id="download" class="bottone click">&#8595; Scarica per Mac</span>
+                    <span id="browser" class="bottone click">Apri Discord nel tuo browser</span>
+                </div>
             </div>
+            
         </div>
     </header>
     <!-- /Header della pagina -->
